--- a/views/playlistSpotify.ejs
+++ b/views/playlistSpotify.ejs
@@ -1,46 +1,47 @@
 <div class="page-wrap">
-        <button id="menu-toggle"></button>
-        <div id="page-wrapper">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="page-header">Vos PlayList Spotify</h1>
-                </div>
-                <!-- /.col-lg-12 -->
-<div id="wrapper">
-
-
-<!--<%= JSON.stringify(playlists) %>-->
-
-        <div id="page-wrapper">
-            <!-- /.row -->
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            Listes de vos playlists musicales
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
-                                <thead>
-                                    <tr>
-                                        <th>Nom de la playlist</th>
-                                        <th>Lien vers la playlist</th>
-                                        <th>Paramètres</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <% playlists.forEach(function(info) { %>
-                                    <tr class="odd gradeX">
-                                        <td><%= info.name %></td>
-                                        <td><%= info.external_urls.spotify %></td>
-                                        <td class="center">
-                                            <a href="/spotify/playlists/show/<%= info.id %>" class="btn btn-primary">Accéder</a>
-                                            <button type="button" class="btn btn-danger">Supprimer</button>
-                                        </td>
-                                    </tr>
-                                    <% }); %>
-                                    <!-- <tr class=" gradeC">
+    <button id="menu-toggle"></button>
+    <div id="page-wrapper">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">Vos PlayList Spotify</h1>
+            </div>
+            <!-- /.col-lg-12 -->
+            <div id="wrapper">
+                <!--<%= JSON.stringify(playlists) %>-->
+                <div id="page-wrapper">
+                    <!-- /.row -->
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    Listes de vos playlists musicales
+                                </div>
+                                <!-- /.panel-heading -->
+                                <div class="panel-body">
+                                    <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                                        <thead>
+                                            <tr>
+                                                <th>Nom de la playlist</th>
+                                                <th>Lien vers la playlist</th>
+                                                <th>Paramètres</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <% playlists.forEach(function(info) { %>
+                                                <tr id="playlist<%= info.id %>" class="odd gradeX">
+                                                    <td>
+                                                        <%= info.name %>
+                                                    </td>
+                                                    <td>
+                                                        <%= info.external_urls.spotify %>
+                                                    </td>
+                                                    <td class="center">
+                                                        <a href="/spotify/playlists/show/<%= info.id %>" class="btn btn-primary">Accéder</a>
+                                                        <button type="button" class="btn btn-danger deletePlaylist" data-id="<%= info.id %>">Supprimer</button>
+                                                    </td>
+                                                </tr>
+                                            <% }); %>
+                                                    <!-- <tr class=" gradeC">
                                         <td>Trident</td>
                                         <td>Internet Explorer 5.0</td>
                                         <td class="center"><button type="button" class="btn btn-primary">Supprimer</button></td>
@@ -50,42 +51,39 @@
                                         <td>Internet Explorer 5.5</td>
                                         <td class="center"><button type="button" class="btn btn-primary">Supprimer</button></td>
                                     </tr> -->
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <!-- /#page-wrapper -->
+                                <form action="/spotify/playlists" method="POST" role="form">
+                                    <legend>Form title</legend>
+                                    <div class="form-group">
+                                        <label for="">Nom playlist : </label>
+                                        <input type="text" class="form-control" id="name" name="name" placeholder="Nom playlist">
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                </form>
+                            </div>
 
-                                </tbody>
-                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <!-- /#page-wrapper -->
-        <form action="/spotify/playlists" method="POST" role="form">
-            <legend>Form title</legend>
-
-            <div class="form-group">
-                <label for="">Nom playlist : </label>
-                <input type="text" class="form-control" id="name" name="name" placeholder="Nom playlist">
-            </div>
-
-
-
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
     </div>
-    <!-- /#wrapper -->
-
-
-
-    <!-- Page-Level Demo Scripts - Tables - Use for reference -->
-    <script type='text/javascript'>
+</div>
+<script type='text/javascript'>
+    var socket = io.connect('http://localhost:8080/');
     $(document).ready(function() {
-        $('#dataTables-example').DataTable({
-            responsive: true
-        });
+        // $('#dataTables-example').DataTable({
+        //     responsive: true
+        // });
+        $(".deletePlaylist").on('click', function(){
+            var id = $(this).data("id");
+            socket.emit('deletePlaylist', {id: id});
+            socket.on('playlistDeleted', function(data) {
+                $("#playlist"+data).remove();
+            })
+        })
     });
-
-    </script>
-
-
-
-            </div>
-
-
-</div>
-</div>
+</script>
