weather integration page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -49,7 +49,7 @@
 
     <link rel='stylesheet' href='/stylesheets/stylePageCreationLogin.css' />
 
-
+    <link rel='stylesheet' href='/stylesheets/stylePageLogin.css' />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
