--- a/app/src/css/stylePageMeteo.css
+++ b/app/src/css/stylePageMeteo.css
@@ -1,8 +1,55 @@
-div#contenumeteo {
-	max-width: 100%;
-	height: 99vh;
-	background-color:red;	
-	width: auto;
-	max-height: 500px;
-	border: black 2px solid;
-	}
+
+.jour{
+	background-color: rgba(255, 255, 255, 0.28);
+	border-bottom: 1px solid white;
+}
+
+.semaine{
+	background-color: rgba(255, 255, 255, 0.28);
+	
+}
+
+.blockTemps{
+	
+	margin-right:10px;
+	display: inline-block;
+	border-left: 1px solid white;
+}
+.info-jour {
+	display: block;
+}
+.temps {
+	
+	text-align:right;
+	font-size: 40px;
+	font-weight: bold;
+	display: inline-block;
+	width: 100%;
+	max-width: 52%;
+	float: left;
+}
+.ville {
+	text-align:left;
+	display: inline-block;
+	width: 100%;
+	max-width: 48%;
+	height: 100%;
+	float: right;
+	height: 60px;
+	padding: 27px 0 0 15px;
+}
+.temperaturemin {
+	text-align:center;
+}
+.temperaturemax {
+	text-align:center;
+}
+.description {
+	text-align:center;
+	font-size: 20px;
+}
+
+.semaine {
+	padding-top: 14px;
+	padding-bottom: 14px;
+}
