Check user for view

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -60,6 +60,9 @@
 </head>
 
 <body>
+    <!-- <% if (login) { %>
+        JE SUIS CONNECTEEE
+    <% } %> -->
 
     <nav id="menu" role="navigation">
                 <header class="avatar">
