--- a/views/creationTrajet.ejs
+++ b/views/creationTrajet.ejs
@@ -30,6 +30,85 @@
 
     </div>
 </div>
-`
+
+ <video width="320" height="240" controls>
+  <source src="/video.mp4" type="video/mp4">
+  <source src="/video.ogg" type="video/ogg">
+Your browser does not support the video tag.
+</video>
+
+<button id="start-button">Start Listening</button>
+<div id="demo-echo"></div>
+
 <script type="text/javascript" src="/js/map.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrvc135P6W5lV0mNykc7S4-1IOWzCCjac&callback=initMap&libraries=places" async defer></script>
+
+<script src="/components/annyang/dist/annyang.min.js"></script>
+<script>
+if (annyang) {
+      // Let's define our first command. First the text we expect, and then the function it should call
+    var commands = {
+        'play video': function() {
+            document.querySelector('video').play();
+        },
+        'pause video': function() {
+            document.querySelector('video').pause();
+        },
+        '* video': function(word) {
+            if(word === 'play') {
+                document.querySelector('video').play();
+            }
+            else if(word === 'pause' || word === 'stop') {
+                document.querySelector('video').pause();
+            }
+        }
+    };
+
+    // Add our commands to annyang
+    annyang.addCommands(commands);
+
+    // Start listening. You can call this here, or attach this call to an event, button, etc.
+    annyang.start();
+}
+</script>
+
+  <script type="text/javascript">
+    function startListening() {
+        var recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition || window.mozSpeechRecognition || window.msSpeechRecognition)();
+        recognition.lang = 'en-US';
+        recognition.interimResults = false;
+        recognition.maxAlternatives = 1;
+        recognition.start();
+
+        [
+         'onaudiostart',
+         'onaudioend',
+         'onend',
+         'onerror',
+         'onnomatch',
+         'onresult',
+         'onsoundstart',
+         'onsoundend',
+         'onspeechend',
+         'onstart'
+        ].forEach(function(eventName) {
+            recognition[eventName] = function(e) {
+                console.log(eventName, e);
+            };
+        });
+
+        document.querySelector('#start-button').innerHTML = 'Listening...';
+
+        recognition.onend = function() {
+            document.querySelector('#start-button').innerHTML = 'Start Listening';
+        };
+        recognition.onresult = function() {
+            document.querySelector('#demo-echo').textContent = event.results[0][0].transcript;
+        };
+    };
+
+    (function() {
+        document.querySelector('#start-button').addEventListener('click', startListening);
+    })();
+</script>
+
